# dict-intl

./: Cargo.toml  README.md
src/: main.rs
