[package]
name = "dict-intl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
log = "0.4"
regex = "1"
serde_json = "1.0"
serde = { version = "1.0.143", features = ["derive"] }
simple_logger = "2.2.0"
walkdir = "2"